mavensmate/TrainingClass/src/objects/Training_Participants__c.object
<CustomObject>
    <fields>
        <fullName>Class_Status__c</fullName>
        <formula>Text(Training_Class__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <formula>Text(Training_Class__r.Class_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Module</label>
        <referenceTo>Project_Module__c</referenceTo>
        <relationshipLabel>Training Participants</relationshipLabel>
        <relationshipName>Training_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training  Classes</relationshipLabel>
        <relationshipName>Training_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Class__c</fullName>
        <label>Training Class</label>
        <referenceTo>Training_Class__c</referenceTo>
        <relationshipLabel>Training Participants</relationshipLabel>
        <relationshipName>Training_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <formula>Training_Class__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Role__c</fullName>
        <label>Training Role</label>
        <picklist>
            <picklistValues>
                <fullName>Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Training Participants</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Module__c</columns>
        <columns>Training_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Participant Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>